samples/_failures_safe/1761087012_b40e59_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8223fc8e.c: In function ‘main’:
./samples/SAFE/__tmp_8223fc8e.c:144:5: error: expected expression at end of input
  144 |     char search_term[
      |     ^~~~
./samples/SAFE/__tmp_8223fc8e.c:144:5: error: expected declaration or statement at end of input
